[project]
name = "chunkless"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.9.0",
    "ipykernel>=6.29.5",
    "jax[cuda12]>=0.4.28",
    "matplotlib>=3.9.2",
    "optax>=0.2.3",
    "scikit-learn>=1.5.2",
    "lerobot[aloha,pusht]",
    "chex>=0.1.87",
    "moviepy>=1.0.3",
    "tensorflow-cpu>=2.17.0",
    "ml-collections>=0.1.1",
    "chunkless",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot" }
chunkless = { workspace = true }
